style(contact/xs): fix text wrapping on form
-Expanded the form wrapper to fix wrapping of "your message" text in the
form.

--- a/headphones/8-styles.css
+++ b/headphones/8-styles.css
@@ -487,7 +487,7 @@
     }
 
     .contact__wrapper {
-      width: 65%;
+      width: 85%;
       height: 80%;
       display: flex;
       flex-direction: column;
